8289043: C2: Vector constant materialization attempt

Reviewed-by: goetz